W-18238331: Ease Streamable HTTP (#753)