@@ -31,6 +31,7 @@
             --add-exports=org.mule.runtime.core/org.mule.runtime.core.privileged.registry=ALL-UNNAMED
               --add-opens=jakarta.mail/com.sun.mail.util=org.mule.service.http
             --add-exports=org.mule.service.http.netty/org.mule.service.http.netty.impl.service=ALL-UNNAMED
+            --add-exports=org.mule.service.http.netty/org.mule.service.http.netty.impl.message.content=ALL-UNNAMED
             ${surefire.test.unit.open.args}
         </surefire.args>
         <javaModuleName>org.mule.service.http</javaModuleName>
